fix package files

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pkgbuild",
   "version": "1.0.0",
+  "private": true,
   "main": "./lib/pkgbuild.webpack.js",
   "author": "obfuscatedgenerated",
   "license": "MIT",
